fix spacing in food detail

--- a/src/containers/FoodDetail/FoodDetail.css
+++ b/src/containers/FoodDetail/FoodDetail.css
@@ -62,5 +62,5 @@
 }
 
 span {
-    padding: 2%;
+    padding: 0 5% 0 5%;
 }
